tests/snapshots/no_step_narration/class_body_step.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/no_step_narration/class_body_step.input.py
---
no-step-narration@191..211
