tests/snapshots/no_step_narration/fmt_off_block.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/no_step_narration/fmt_off_block.input.py
---

