tests/snapshots/no_step_narration/fmt_off_unaffected.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/no_step_narration/fmt_off_unaffected.input.py
---
no-step-narration@235..255
