tests/snapshots/no_step_narration/idempotent.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/no_step_narration/idempotent.input.py
---

