tests/snapshots/no_step_narration/inline_comment_skipped.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/no_step_narration/inline_comment_skipped.input.py
---

