tests/snapshots/no_step_narration/module_level_step.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/no_step_narration/module_level_step.input.py
---
no-step-narration@127..147
no-step-narration@148..168
