tests/snapshots/no_step_narration/module_level_step.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/no_step_narration/module_level_step.input.py
---
"""
A numbered-step comment at module scope (above any statement) is
flagged the same way as one inside a function body.
"""


# 1. normalize input
# 2. emit the result


def process(payload):
    return payload.strip()
